Fixed colouring of menubar and bookmarksbar in dark mode

--- a/userChrome.css
+++ b/userChrome.css
@@ -27,8 +27,8 @@
   border-top: 1px solid #b6b6b6 !important;
   border-bottom: 1px solid #b6b6b6 !important;
 }
-#toolbar-menubar:-moz-window-inactive,
-#PersonalToolbar:-moz-window-inactive {
+#toolbar-menubar:-moz-window-inactive:not(:-moz-lwtheme-brighttext),
+#PersonalToolbar:-moz-window-inactive:not(:-moz-lwtheme-brighttext) {
   opacity: 0.3 !important;
 }
 .tab-background[selected="true"]:-moz-window-inactive {
@@ -39,8 +39,8 @@
   border-right: 1px solid #b6b6b6 !important;
   border-bottom: 1px solid #b6b6b6 !important;
 }
-.tab-label[selected="true"]:-moz-window-inactive,
-.tab-label:-moz-window-inactive {
+.tab-label[selected="true"]:-moz-window-inactive:not(:-moz-lwtheme-brighttext),
+.tab-label:-moz-window-inactive:not(:-moz-lwtheme-brighttext) {
   color: #6C6B6B !important;
 }
 #PanelUI-menu-button:-moz-window-inactive,
@@ -132,7 +132,7 @@
 :root[sizemode="fullscreen"] #nav-bar {
   -moz-appearance: none !important; 
   background: linear-gradient(#e5e5e5, #d3d3d3) !important;
-  border-bottom: 1px solid #898989 !important;
+  border-bottom: 1px solid #979797 !important;
   padding: 0px 6px 0px 6px !important; 
 }
 
@@ -268,8 +268,8 @@ toolbar .toolbarbutton-1:active > .toolbarbutton-icon {
   bottom: 0px !important; /* keeps tabs to bottom */
   width: 100vw !important;
   height: 31px !important; /* tabs actual height */
-  border-top: 1px solid #898989 !important;
-  border-bottom: 1px solid #898989 !important;
+  border-top: 1px solid #979797 !important;
+  border-bottom: 1px solid #979797 !important;
   background: linear-gradient(#cacaca, #d5d5d5) !important;
   box-shadow: inset 0 1px 2px 1px rgba(0,0,0, 0.1) !important;
 }
@@ -336,7 +336,7 @@ toolbar .toolbarbutton-1:active > .toolbarbutton-icon {
   width: 28px !important;
   height: 28px !important;
   padding: 6px !important;
-  margin: 0px !important;
+  margin-right: 0px !important;
   border-radius: 3px !important;
 }
 .tabs-newtab-button {
@@ -477,11 +477,11 @@ toolbar .toolbarbutton-1:active > .toolbarbutton-icon {
 }
 #PersonalToolbar:-moz-lwtheme-brighttext {
     background: #35383D !important;
-    border-bottom: 1px solid rgb(36, 38, 39) !important;
+    border-top: 1px solid rgb(36, 38, 39) !important;
 }
 #toolbar-menubar:-moz-lwtheme-brighttext {
     background: #35383D !important;
-    border-bottom: 1px solid rgb(36, 38, 39) !important;
+    border-top: 1px solid rgb(36, 38, 39) !important;
 }
 menubar:-moz-lwtheme-brighttext > menu[open="true"] {
 	color: #d1d1d1 !important;
@@ -550,4 +550,12 @@ menubar:-moz-lwtheme-brighttext > menu[open="true"] {
 #customization-reset-button:-moz-lwtheme-brighttext,
 #customization-done-button:-moz-lwtheme-brighttext {
 	color: #FFFFFF !important;
+}
+.bookmark-item:-moz-lwtheme-brighttext {
+	color: #A9A9A9 !important;
+	text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4) !important; 
+}
+#menubar-items:-moz-lwtheme-brighttext {
+	color: #A9A9A9 !important;
+	text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4) !important; 
 }
